--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                 <i class="ri-newspaper-line"></i>
                                 <h2>Biografija</h2>
                             </div>
-                            <button class="btn" onclick="downloadDocument('./assets/', 'CV Andjela.pdf')">Pogledaj CV <i class="ri-arrow-right-line"></i></button>
+                            <a class="btn" href="./assets/CV Andjela.pdf" download="CV Andjela.pdf">Pogledaj CV <i class="ri-arrow-right-line"></i></a>
                             <ul>
                                 <li>Ime i prezime: Anđela Jevtić</li>
                                 <li>Datum rođenja: 30.03.2005</li>
@@ -54,7 +54,7 @@
                                 <i class="ri-school-line"></i>
                                 <h2>Obrazovanje</h2>
                             </div>
-                            <button class="btn" onclick="downloadDocument('./assets/', 'CV Andjela.pdf')">Pogledaj CV <i class="ri-arrow-right-line"></i></button>
+                            <a class="btn" href="./assets/CV Andjela.pdf" download="CV Andjela.pdf">Pogledaj CV <i class="ri-arrow-right-line"></i></a>
                             <ul>
                                 <li>Završena škola: Saobraćajno-tehnička škola “12 februar” Niš</li>
                                 <li>Godina početka/završetka: 2020 - 2024</li>
@@ -66,7 +66,7 @@
                                 <i class="ri-road-map-line"></i>
                                 <h2>Hobi</h2>
                             </div>
-                            <button class="btn" onclick="downloadDocument('./assets/', 'CV Andjela.pdf')">Pogledaj CV <i class="ri-arrow-right-line"></i></button>
+                            <a class="btn" href="./assets/CV Andjela.pdf" download="CV Andjela.pdf">Pogledaj CV <i class="ri-arrow-right-line"></i></a>
                             <ul>
                                 <li>Čitanje knjiga i umetnost</li>
                                 <li>Sport i muzika</li>
